feat(condo): DOMA-8515 new Meters design (#4791)
* feat(condo): DOMA-8515 new Meters design

* feat(condo): DOMA-8515 add overdue highlighting for verification date

* feat(condo): DOMA-8515 request meters directly

* feat(condo): DOMA-8515 adapt filters for Meters

* feat(condo): DOMA-8515 change menu and title name for Meters section

* feat(condo): DOMA-8515 add separate create pages

* feat(condo): DOMA-8515 added meter info page and update meter page

* feat(callcenter): DOMA-8515 support new meters design in callcenter

* feat(condo): DOMA-8515 cast for intl

* feat(condo): DOMA-8515 added archiveDate field to Meter and PropertyMeter models

* feat(condo): DOMA-8515 add filters by status for Meter and PropertyMeter tables

* fix(condo): DOMA-8515 update gql type to string

* feat(condo): DOMA-8515 get all reporting periods and find the right one

* feat(condo): DOMA-8515 change default date range value

* feat(condo): DOMA-8515 regenerate migration

* feat(condo): DOMA-8515 added update meter readings logic

* feat(condo): DOMA-8515 added b2b logo and updated no meter tips

* feat(condo): DOMA-8515 separated create and update meter forms, page naming

* fix(condo): DOMA-8515 pr fixes

* fix(condo): DOMA-8515 pr fix - separated useFilters

* fix(condo): DOMA-8515 pr fixes

* feat(condo): DOMA-8515 support changes in callcenter

* feat(condo): DOMA-8515 save meter type to query

* feat(condo): DOMA-8515 add checkbox selection to property meter readings table

* feat(condo): DOMA-8515 added consumption column render and pr fixes

* feat(callcenter): DOMA-8515 fix breaking changes in callcenter

* feat(condo): DOMA-8515 small design fixes

* fix(condo): DOMA-8515 trigger build

* feat(condo): DOMA-8515 added remember property when adding readings and pr fixes

* feat(condo): DOMA-8515 added meter step to onboarding

* fix(condo): DOMA-8515 delete TourSteps on migration down

* fix(condo): DOMA-8515 rest

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -47,7 +47,8 @@
   "import.uploadModal.chooseAnotherFileForUpload": "Select another file to download",
   "import.successModal.title": "Everything worked out - data downloaded",
   "import.successModal.buttonLabel": "Continue",
-  "import.meter.plural": "Meter readings",
+  "import.meterReading.plural": "Meter readings",
+  "import.meter.plural": "Meters",
   "import.meter.genitive": "Meter readings",
   "import.meter.prepositional": "Meter readings",
   "import.meter.requiredFields": "Specify address, unit and its type, account number, meter type, number of tariffs and date of transmission of the meter readings",
@@ -321,7 +322,7 @@
   "global.section.marketplace": "Marketplace",
   "global.section.contacts": "Contacts",
   "global.section.settings": "Settings",
-  "global.section.meters": "Meters log",
+  "global.section.meters": "Meters and readings log",
   "global.section.miniapps": "Services",
   "global.section.newsItems": "News",
   "global.section.SPP": "Payments from individuals",
@@ -775,15 +776,19 @@
   "pages.condo.meter.create.MetersAndReadings": "Meters and meter readings",
   "pages.condo.meter.create.MeterReadings": "Meter readings",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "This resource is owned by another organization. Please, contact tech support",
-  "pages.condo.meter.index.PageTitle": "Meters log",
+  "pages.condo.meter.index.PageTitle": "Meters and readings log",
   "pages.condo.meter.index.EmptyList.header": "No meters yet",
   "pages.condo.meter.index.EmptyList.manualCreateCard.body.description": "Fill out the form with the address",
   "pages.condo.propertyMeter.index.EmptyList.header": "No property meters yet",
+  "pages.condo.meter.index.CreateMeterReadingButtonLabel": "Add new meter reaidngs",
   "pages.condo.meter.index.CreateMeterButtonLabel": "Add new meter",
   "pages.condo.meter.index.CreateMeterReadingsButtonLabel": "Take meter readings",
   "pages.condo.meter.index.QuickFilterOnlyLatest": "Only last readings",
   "pages.condo.meter.index.QuickFilterOnlyLatestDescription": "If a resident submitted readings more than once in a given period, then in the table you will see only the last sent readings",
-  "pages.condo.meter.index.meterTab": "Submeter log",
+  "pages.condo.meter.index.meterReadingTab": "Readings",
+  "pages.condo.meter.index.meterTab": "Metering Devices",
+  "pages.condo.meter.index.MeterType.meterReading": "Meter readings",
+  "pages.condo.meter.index.MeterType.houseMeterReading": "House meter readings",
   "pages.condo.meter.index.propertyMeterTab": "Meter log",
   "pages.condo.meter.index.reportingPeriodTab": "Meter readings reporting period",
   "pages.condo.meter.index.reportingPeriod.EmptyList.create": "Create period",
@@ -793,7 +798,9 @@
   "pages.condo.meter.Place": "Place",
   "pages.condo.meter.MeterReading": "Reading",
   "pages.condo.meter.MeterReadingDate": "Reading date",
+  "pages.condo.meter.MeterVerificationDate": "Verification date",
   "pages.condo.meter.Resource": "Resource",
+  "pages.condo.meter.Consumption": "Consumption",
   "pages.condo.meter.AutoPrefix": "auto",
   "pages.condo.meter.AutoSourceAlert.title": "Data obtained automatically",
   "pages.condo.meter.AutoSourceAlert.message": "from the {app} service",
@@ -990,6 +997,9 @@
   "pages.ticket.autoAssignment.notifications.save.message": "Data saved",
   "pages.ticket.autoAssignment.notifications.delete.message": "Data deleted",
   "pages.ticket.autoAssignment.notifications.error.message": "Failed to load data",
+  "pages.condo.meter.id.PageTitle": "Meter",
+  "pages.condo.meter.meterId.update.PageTitle": "Edit metering device",
+  "pages.condo.meter.propertyMeterId.update.PageTitle": "Edit property metering device",
   "pages.condo.meter.warning.modal.HelpMessage": "New counters and readings will not be saved if you leave the page.",
   "pages.condo.meter.form.ConfirmDeleteTitle": "Remove meter?",
   "pages.condo.meter.form.ConfirmDeleteMessage": "All data, related to this property, will be lost",
@@ -997,6 +1007,10 @@
   "pages.condo.meter.MeterDataTitle": "Meters data",
   "pages.condo.meter.SendMetersReading": "Send meters reading",
   "pages.condo.meter.AddMeter": "Add meter",
+  "pages.condo.meter.noMetersOnAddress": "No meter was found at this address. It may not have been added to the platform. You can add it",
+  "pages.condo.meter.noMetersOnAddress.link": "in the «Meters and meter readings» section",
+  "pages.condo.meter.AddMeter.Button": "Add meter",
+  "pages.condo.meter.AddPropertyMeter.Button": "Add property meter",
   "pages.condo.meter.Account": "Account",
   "pages.condo.meter.AccountNumber": "Account number",
   "pages.condo.meter.Period": "Meter readings reporting period",
@@ -1024,21 +1038,43 @@
   "pages.condo.meter.MeterNumber": "Meter number",
   "pages.condo.meter.MeterPlace": "Meter place",
   "pages.condo.meter.NumberOfMeter": "Number of meter device",
+  "pages.condo.meter.MeterReading.CountSelectedReadings": "Items selected",
+  "pages.condo.meter.MeterReading.DeleteMeterReadings": "Delete readings",
+  "pages.condo.meter.MeterReading.DeleteMeterReadings.Warn": "It will be impossible to restore them. But you can enter them again.",
+  "pages.condo.meter.Meter.DeleteMeter": "Do you want to delete metering device?",
+  "pages.condo.meter.Meter.DeleteMeter.Warn": "You won't be able to restore it but can add a new one",
+  "pages.condo.meter.Meter.isActive": "Active",
+  "pages.condo.meter.Meter.outOfOrder": "Out of order",
+  "pages.condo.meter.Meter.putOutOfOrder": "Withdraw",
+  "pages.condo.meter.MeterInfo": "Device information",
+  "pages.condo.meter.Meter.PutToArchive.Modal.Title": "Do you want to disable this metering device?",
+  "pages.condo.meter.Meter.PutToArchive.Modal.Text": "Specify the withdrawal date after which the device will not be displayed in the resident's mobile application and it will not be possible to give readings",
+  "pages.condo.meter.MeterReportingPeriod.Title": "Meter reporting periods",
+  "pages.condo.meter.MeterReportingPeriod.Text": "from {startDate} to {endDate} inclusive",
+  "pages.condo.meter.UpdateMeterReading.Modal.Title": "Edit readings",
+  "pages.condo.meter.UpdateMeterReading.Modal.Text": "Enter new readings for the meter No.{number}",
+  "pages.condo.meter.nextVerificationTip": "You should verify this metering device soon, it's next verification date is",
+  "pages.condo.meter.archivedMeterTip.Message": "Meter {notShowing} in the resident's mobile app",
+  "pages.condo.meter.archivedMeterTip.NotShowing": "is not shown",
   "pages.condo.meter.MeterWithSameNumberIsExist": "Meter with same number exist in organization",
   "pages.condo.meter.MeterWithSameAccountNumberIsExist": "Such a account number already exists in another unit",
   "pages.condo.meter.TariffsNumber": "Number of tariffs",
   "pages.condo.meter.InstallationDate": "Date of installation",
   "pages.condo.meter.CommissioningDate": "Date of commissioning",
   "pages.condo.meter.VerificationDate": "Date of verification",
+  "pages.condo.meter.VerificationDate.Overdue": "Overdue by {days}",
   "pages.condo.meter.NextVerificationDate": "Date of next verification",
   "pages.condo.meter.SealingDate": "Date of sealing",
   "pages.condo.meter.ControlReadingsDate": "Date of control readings",
+  "pages.condo.meter.ArchiveDate": "Withdrawal date",
   "pages.condo.meter.LessThanPrevious": "New readings cannot be less than the previous ones",
   "pages.condo.meter.GreaterThanPrevious": "Consumption greatly exceeds the value for the previous month",
   "pages.condo.meter.EnterAddress": "Enter address",
   "pages.condo.meter.EnterAccountNumber": "Enter account number",
   "pages.condo.meter.StartDate": "Start date",
   "pages.condo.meter.EndDate": "End date",
+  "pages.condo.meter.Verification.StartDate": "Verification start",
+  "pages.condo.meter.Verification.EndDate": "Verification end",
   "pages.condo.meter.EnterMeterNumber": "Enter number",
   "pages.condo.meter.EnterPlace": "Enter place",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "Delete period?",
@@ -1674,6 +1710,9 @@
   "meterResource.GasSupply.measure": "cubic meter",
   "contact.AddContact": "Add contact",
   "meter.AddMeterReadings": "Add meter readings",
+  "meter.AddPropertyMeterReadings": "Add property meter readings",
+  "meter.AddMeters": "Add meters",
+  "meter.AddPropertyMeters": "Add property meters",
   "meter.reportingPeriod.AddMeterReportingPeriod": "Add meter reporting period",
   "meter.reportingPeriod.EditMeterReportingPeriod": "Edit meter reporting period",
   "meter.modal.ChooseAccountNumber": "Choose account number",
@@ -2076,6 +2115,10 @@
   "tour.step.viewResidentsAppGuide.todo.ticket.title": "Tell the residents about the tickets",
   "tour.step.viewResidentsAppGuide.todo.ticket.description": "To send tickets, residents need to download the Doma application. We have prepared a guide with ready-made templates to promote the application among residents.",
   "tour.step.viewResidentsAppGuide.completed.ticket.title": "Have you looked at the guide for managing organizations",
+  "tour.step.createMeter.todo.title": "Add meter",
+  "tour.step.createMeter.todo.description": "To take statements from residents and form payment documents",
+  "tour.step.createMeter.completed.title": "You have added a meter",
+  "tour.step.createMeter.completed.linkTitle": "Add more",
   "tour.step.createMeterReadings.todo.title": "Add the meter readings",
   "tour.step.createMeterReadings.todo.description": "This is necessary to work with readings on the platform. You can add real meter readings or specify any data to figure out how it works.",
   "tour.step.createMeterReadings.completed.title": "You have added the meter readings",
@@ -2110,22 +2153,22 @@
   "tour.completedStepModal.createPropertyMap.subtitleLinkLabel": "on the pages of properties",
   "tour.completedStepModal.createPropertyMap.bodyText.default": "The map is needed to work with specific rooms. Take a look at the Doma guide — it will help with other tasks.",
   "tour.completedStepModal.createPropertyMap.bodyText.ticket": "The next step to optimizing work with tickets is to create an application. Using her example, you will see what the control room and the application form look like. We recommend transferring the real application to the platform, since they cannot be deleted.",
-  "tour.completedStepModal.createPropertyMap.bodyText.meter": "The next step in optimizing the work with meter readings is to add readings to the platform. You can add real meter readings or specify any data to figure out how it works.",
+  "tour.completedStepModal.createPropertyMap.bodyText.meter": "The next step in optimizing the work is to add meters. To figure out how to work with the meters on the platform, add a meter, and then specify any readings.",
   "tour.completedStepModal.createPropertyMap.bodyText.resident": "The next step to strengthening relations with residents is the implementation of the application. It is necessary for residents to pay for receipts on their own, leave applications and transmit meter readings. To make it easier to promote the application among residents, we have prepared a guide with ready-made templates.",
   "tour.completedStepModal.createPropertyMap.buttonLabel.default": "To the tour",
   "tour.completedStepModal.createPropertyMap.buttonLabel.ticket": "Create ticket",
-  "tour.completedStepModal.createPropertyMap.buttonLabel.meter": "Add meter readings",
+  "tour.completedStepModal.createPropertyMap.buttonLabel.meter": "Add meter",
   "tour.completedStepModal.createPropertyMap.buttonLabel.resident": "View guide",
   "tour.completedStepModal.importProperties.title": "That's it — the properties and the map have been created",
   "tour.completedStepModal.importProperties.subtitle": "You can add and edit data",
   "tour.completedStepModal.importProperties.subtitleLinkLabel": "on the pages of properties",
   "tour.completedStepModal.importProperties.bodyText.default": "The map is needed to work with specific rooms. Take a look at the House guide — it will help with other tasks.",
   "tour.completedStepModal.importProperties.bodyText.ticket": "The next step to optimizing work with tickets is to create an ticket. Using her example, you will see what the control room and the ticket form look like. We recommend transferring the real ticket to the platform, since they cannot be deleted.",
-  "tour.completedStepModal.importProperties.bodyText.meter": "The next step in optimizing the work with meter readings is to add readings to the platform. You can add real meter readings or specify any data to figure out how it works.",
+  "tour.completedStepModal.importProperties.bodyText.meter": "The next step in optimizing the work is to add meters. To figure out how to work with the meters on the platform, add a meter, and then specify any readings.",
   "tour.completedStepModal.importProperties.bodyText.resident": "The next step to strengthening relations with residents is the implementation of the application. It is necessary for residents to pay for receipts on their own, leave applications and transmit meter readings. To make it easier to promote the application among residents, we have prepared a guide with ready-made templates.",
   "tour.completedStepModal.importProperties.buttonLabel.default": "To the tour",
   "tour.completedStepModal.importProperties.buttonLabel.ticket": "Create ticket",
-  "tour.completedStepModal.importProperties.buttonLabel.meter": "Add meter readings",
+  "tour.completedStepModal.importProperties.buttonLabel.meter": "Add meter",
   "tour.completedStepModal.importProperties.buttonLabel.resident": "View guide",
   "tour.completedStepModal.createTicket.title": "First ticket created",
   "tour.completedStepModal.createTicket.subtitle": "All applications can be viewed",
@@ -2134,6 +2177,13 @@
   "tour.completedStepModal.createTicket.bodyText.ticket": "The last step to optimizing the work with tickets is to tell residents about the Doma mobile application. You can use it to send tickets to the address of the managing organization. To make it easier to promote the application among residents, we have prepared a guide with ready-made templates.",
   "tour.completedStepModal.createTicket.buttonLabel.default": "To the tour",
   "tour.completedStepModal.createTicket.buttonLabel.ticket": "View guide",
+  "tour.completedStepModal.createMeter.title": "Everything worked out — you added the first meter",
+  "tour.completedStepModal.createMeter.subtitle": "You will be able to add more objects",
+  "tour.completedStepModal.createMeter.subtitleLinkLabel": "in the section «Meters and readings»",
+  "tour.completedStepModal.createMeter.bodyText.default": "Now you can store and work with meters data on the platform. Take a look at the guide — it will help with other tasks.",
+  "tour.completedStepModal.createMeter.bodyText.meter": "The next step in optimizing the operation of meters is to load meter readings",
+  "tour.completedStepModal.createMeter.buttonLabel.default": "To the tour",
+  "tour.completedStepModal.createMeter.buttonLabel.meter": "Add meter readings",
   "tour.completedStepModal.createMeterReadings.title": "First meter readings created",
   "tour.completedStepModal.createMeterReadings.subtitle": "You will be able to upload more readings",
   "tour.completedStepModal.createMeterReadings.subtitleLinkLabel": "in the section \"Meters\"",
