--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -47,7 +47,8 @@
   "import.uploadModal.chooseAnotherFileForUpload": "Выбрать другой файл для загрузки",
   "import.successModal.title": "Все получилось — данные загружены",
   "import.successModal.buttonLabel": "Продолжить",
-  "import.meter.plural": "Показания ИПУ",
+  "import.meterReading.plural": "Показания",
+  "import.meter.plural": "Приборы",
   "import.meter.genitive": "Показаний ИПУ",
   "import.meter.prepositional": "Показаниях ИПУ",
   "import.meter.requiredFields": "Укажите адрес, помещение и его тип, номер лицевого счета, тип счетчика, количество тарифов и дату передачи показаний",
@@ -321,7 +322,7 @@
   "global.section.marketplace": "Маркетплейс",
   "global.section.contacts": "Жители",
   "global.section.settings": "Настройки",
-  "global.section.meters": "Приборы учета",
+  "global.section.meters": "Приборы и показания",
   "global.section.miniapps": "Сервисы",
   "global.section.newsItems": "Новости",
   "global.section.SPP": "Платежи от физлиц",
@@ -775,15 +776,19 @@
   "pages.condo.meter.create.MetersAndReadings": "Приборы учета и показания",
   "pages.condo.meter.create.MeterReadings": "Показания",
   "pages.condo.meter.create.resourceOwnedByAnotherOrganization": "Этот ресурс больше не принадлежит этой УК. Пожалуйста, обратитесь в техподдержку",
-  "pages.condo.meter.index.PageTitle": "Приборы учета",
+  "pages.condo.meter.index.PageTitle": "Приборы и показания",
   "pages.condo.meter.index.EmptyList.header": "Пока ИПУ нет",
   "pages.condo.meter.index.EmptyList.manualCreateCard.body.description": "Заполнить форму с указанием адреса",
   "pages.condo.propertyMeter.index.EmptyList.header": "Пока ОДПУ нет",
-  "pages.condo.meter.index.CreateMeterButtonLabel": "Добавить показания",
-  "pages.condo.meter.index.CreateMeterReadingsButtonLabel": "Сдать показания ПУ",
+  "pages.condo.meter.index.CreateMeterReadingButtonLabel": "Добавить показания",
+  "pages.condo.meter.index.CreateMeterButtonLabel": "Добавить счетчик",
+  "pages.condo.meter.index.CreateMeterReadingsButtonLabel": "Сдать показания",
   "pages.condo.meter.index.QuickFilterOnlyLatest": "Только последние показания",
   "pages.condo.meter.index.QuickFilterOnlyLatestDescription": "Если житель сдавал показания в заданный период больше одного раза, то в таблице вы увидите только его последние отправленные показания",
-  "pages.condo.meter.index.meterTab": "Показания ИПУ",
+  "pages.condo.meter.index.meterReadingTab": "Показания",
+  "pages.condo.meter.index.meterTab": "Приборы",
+  "pages.condo.meter.index.MeterType.meterReading": "ИПУ",
+  "pages.condo.meter.index.MeterType.houseMeterReading": "ОДПУ",
   "pages.condo.meter.index.propertyMeterTab": "Показания ОДПУ",
   "pages.condo.meter.index.reportingPeriodTab": "Период подачи показаний ИПУ",
   "pages.condo.meter.index.reportingPeriod.EmptyList.create": "Добавить период",
@@ -793,7 +798,9 @@
   "pages.condo.meter.Place": "Место",
   "pages.condo.meter.MeterReading": "Показание",
   "pages.condo.meter.MeterReadingDate": "Дата снятия",
+  "pages.condo.meter.MeterVerificationDate": "Дата поверки",
   "pages.condo.meter.Resource": "Ресурс",
+  "pages.condo.meter.Consumption": "Расход",
   "pages.condo.meter.AutoPrefix": "авто",
   "pages.condo.meter.AutoSourceAlert.title": "Данные получены автоматически",
   "pages.condo.meter.AutoSourceAlert.message": "из сервиса {app}",
@@ -990,6 +997,9 @@
   "pages.ticket.autoAssignment.notifications.save.message": "Данные сохранены",
   "pages.ticket.autoAssignment.notifications.delete.message": "Данные удалены",
   "pages.ticket.autoAssignment.notifications.error.message": "Что-то пошло не так",
+  "pages.condo.meter.id.PageTitle": "Прибор учета",
+  "pages.condo.meter.meterId.update.PageTitle": "Редактирование ИПУ",
+  "pages.condo.meter.propertyMeterId.update.PageTitle": "Редактирование ОДПУ",
   "pages.condo.meter.warning.modal.HelpMessage": "Новые счетчики и показания не сохранятся, если вы уйдете со страницы.",
   "pages.condo.meter.form.ConfirmDeleteTitle": "Удалить счётчик?",
   "pages.condo.meter.form.ConfirmDeleteMessage": "Восстановить счетчик будет невозможно",
@@ -997,6 +1007,10 @@
   "pages.condo.meter.MeterDataTitle": "Данные приборов учета",
   "pages.condo.meter.SendMetersReading": "Отправить показания",
   "pages.condo.meter.AddMeter": "Добавить прибор учета",
+  "pages.condo.meter.noMetersOnAddress": "По этому адресу не найдено прибора. Возможно, он не добавлен на платформу. Вы можете добавить его",
+  "pages.condo.meter.noMetersOnAddress.link": "в разделе «Приборы и показания»",
+  "pages.condo.meter.AddMeter.Button": "Добавить ИПУ",
+  "pages.condo.meter.AddPropertyMeter.Button": "Добавить ОДПУ",
   "pages.condo.meter.Account": "Лицевой счет",
   "pages.condo.meter.AccountNumber": "Номер лицевого счета",
   "pages.condo.meter.Period": "Период подачи показаний",
@@ -1021,24 +1035,46 @@
   "pages.condo.meter.AddHeatSupplyMeterModalTitle": "теплоснабжения",
   "pages.condo.meter.СanNotBeEarlierThanInstallation": "Дата не может быть раньше даты установки",
   "pages.condo.meter.CanNotBeEarlierThanFirstVerification": "Дата следующей поверки не может быть раньше предыдущей",
-  "pages.condo.meter.MeterNumber": "№ прибора учета",
+  "pages.condo.meter.MeterNumber": "Номер прибора учета",
   "pages.condo.meter.MeterPlace": "Место установки счетчика",
   "pages.condo.meter.NumberOfMeter": "Прибор учета №",
+  "pages.condo.meter.MeterReading.CountSelectedReadings": "Выбрано элементов",
+  "pages.condo.meter.MeterReading.DeleteMeterReadings": "Удалить показания",
+  "pages.condo.meter.MeterReading.DeleteMeterReadings.Warn": "Восстановить их будет нельзя. Но можно ввести заново.",
+  "pages.condo.meter.Meter.DeleteMeter": "Вы хотите удалить прибор учета?",
+  "pages.condo.meter.Meter.DeleteMeter.Warn": "Его нельзя будет восстановить, но можно будет добавить новый",
+  "pages.condo.meter.Meter.isActive": "Активен",
+  "pages.condo.meter.Meter.outOfOrder": "Выведен из работы",
+  "pages.condo.meter.Meter.putOutOfOrder": "Вывести",
+  "pages.condo.meter.MeterInfo": "Информация о приборе",
+  "pages.condo.meter.Meter.PutToArchive.Modal.Title": "Вы хотите вывести счетчик из работы?",
+  "pages.condo.meter.Meter.PutToArchive.Modal.Text": "Укажите дату вывода, после которой счетчик не будет отображаться в мобильном приложении жителя и по нему нельзя будет предать показания",
+  "pages.condo.meter.MeterReportingPeriod.Title": "Периоды подачи показаний",
+  "pages.condo.meter.MeterReportingPeriod.Text": "c {startDate} по {endDate} числа включительно",
+  "pages.condo.meter.UpdateMeterReading.Modal.Title": "Редактировать показания",
+  "pages.condo.meter.UpdateMeterReading.Modal.Text": "Внесите новые показания по счетчику №{number}",
+  "pages.condo.meter.nextVerificationTip": "Скоро нужно провести поверку, ее дата",
+  "pages.condo.meter.archivedMeterTip.Message": "Прибор учета {notShowing} в мобильном приложении жителя",
+  "pages.condo.meter.archivedMeterTip.NotShowing": "не отображается",
   "pages.condo.meter.MeterWithSameNumberIsExist": "Прибор учета с таким номером уже существует в организации",
   "pages.condo.meter.MeterWithSameAccountNumberIsExist": "Такой лицевой счет уже существует в другой квартире",
   "pages.condo.meter.TariffsNumber": "Количество тарифов",
   "pages.condo.meter.InstallationDate": "Дата установки",
   "pages.condo.meter.CommissioningDate": "Дата ввода в эксплуатацию",
   "pages.condo.meter.VerificationDate": "Дата поверки",
+  "pages.condo.meter.VerificationDate.Overdue": "Просрочена на {days}",
   "pages.condo.meter.NextVerificationDate": "Дата следующей поверки",
   "pages.condo.meter.SealingDate": "Дата опломбирования",
   "pages.condo.meter.ControlReadingsDate": "Дата контрольных показаний",
+  "pages.condo.meter.ArchiveDate": "Дата вывода из работы",
   "pages.condo.meter.LessThanPrevious": "Новые показания не могут быть меньше предыдущих",
   "pages.condo.meter.GreaterThanPrevious": "Расход сильно превышает значение за предыдущий месяц",
   "pages.condo.meter.EnterAddress": "Введите адрес",
   "pages.condo.meter.EnterAccountNumber": "Введите лицевой счет",
   "pages.condo.meter.StartDate": "Начальная дата",
   "pages.condo.meter.EndDate": "Конечная дата",
+  "pages.condo.meter.Verification.StartDate": "Начало поверки",
+  "pages.condo.meter.Verification.EndDate": "Конец поверки",
   "pages.condo.meter.EnterMeterNumber": "Введите номер",
   "pages.condo.meter.EnterPlace": "Ввести место установки прибора",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteTitle": "Удалить период?",
@@ -1673,7 +1709,10 @@
   "meterResource.HeatSupply.measure": "Гкал",
   "meterResource.GasSupply.measure": "куб. м.",
   "contact.AddContact": "Добавить жителя",
-  "meter.AddMeterReadings": "Подача показаний",
+  "meter.AddMeterReadings": "Сдать показания ИПУ",
+  "meter.AddPropertyMeterReadings": "Сдать показания ОДПУ",
+  "meter.AddMeters": "Добавление ИПУ",
+  "meter.AddPropertyMeters": "Добавление ОДПУ",
   "meter.reportingPeriod.AddMeterReportingPeriod": "Добавить период подачи показаний",
   "meter.reportingPeriod.EditMeterReportingPeriod": "Изменить период подачи показаний",
   "meter.modal.ChooseAccountNumber": "Выбрать ЛС",
@@ -2076,6 +2115,10 @@
   "tour.step.viewResidentsAppGuide.todo.ticket.title": "Расскажите о заявках жителям",
   "tour.step.viewResidentsAppGuide.todo.ticket.description": "Чтобы отправлять заявки, жителям нужно скачать приложение Doma. Мы подготовили гайд с готовыми шаблонами для продвижения приложение среди жителей.",
   "tour.step.viewResidentsAppGuide.completed.ticket.title": "Вы посмотрели гайд для управляющих организаций",
+  "tour.step.createMeter.todo.title": "Добавьте счетчик ИПУ",
+  "tour.step.createMeter.todo.description": "Чтобы принимать показания от жителей и формировать платежные документы",
+  "tour.step.createMeter.completed.title": "Вы добавили счетчик ИПУ",
+  "tour.step.createMeter.completed.linkTitle": "Добавить еще",
   "tour.step.createMeterReadings.todo.title": "Добавьте показания ИПУ",
   "tour.step.createMeterReadings.todo.description": "Это нужно для работы с показаниями на платформе. Вы можете добавить реальные показания ИПУ или указать любые данные, чтобы разобраться, как это работает.",
   "tour.step.createMeterReadings.completed.title": "Вы добавили показания ИПУ",
@@ -2110,22 +2153,22 @@
   "tour.completedStepModal.createPropertyMap.subtitleLinkLabel": "на страницах домов",
   "tour.completedStepModal.createPropertyMap.bodyText.default": "Шахматка нужна, чтобы работать с конкретными помещениями. Загляните в путеводитель Домов — он поможет с другими задачами.",
   "tour.completedStepModal.createPropertyMap.bodyText.ticket": "Следующий шаг к оптимизации работы с заявками — создание заявки. На ее примере вы увидите, как выглядит диспетчерская и форма заявки. Рекомендуем перенести на платформу реальную заявку, поскольку их нельзя удалять.",
-  "tour.completedStepModal.createPropertyMap.bodyText.meter": "Следующий шаг в оптимизации работы с показаниями счетчиков — добавление показаний на платформу. Вы можете добавить реальные показания ИПУ или указать любые данные, чтобы разобраться, как это работает.",
+  "tour.completedStepModal.createPropertyMap.bodyText.meter": "Следующий шаг в оптимизации работы — добавление приборов учета. Чтобы разобраться, как устроена работа с ИПУ на платформе, добавьте прибор, а затем укажите любые показания.",
   "tour.completedStepModal.createPropertyMap.bodyText.resident": "Следующий шаг к укреплению отношений с жителями — внедрение приложения. Это нужно, чтобы жители самостоятельно оплачивали квитанции, оставляли заявки и передавали показания счетчиков. Чтобы продвигать приложение среди жителей было проще, мы подготовили гайд с готовыми шаблонами.",
   "tour.completedStepModal.createPropertyMap.buttonLabel.default": "В путеводитель",
   "tour.completedStepModal.createPropertyMap.buttonLabel.ticket": "Создать заявку",
-  "tour.completedStepModal.createPropertyMap.buttonLabel.meter": "Добавить показания ИПУ",
+  "tour.completedStepModal.createPropertyMap.buttonLabel.meter": "Добавить ИПУ",
   "tour.completedStepModal.createPropertyMap.buttonLabel.resident": "Смотреть гайд",
   "tour.completedStepModal.importProperties.title": "Готово — дома и шахматка созданы",
   "tour.completedStepModal.importProperties.subtitle": "Вы можете добавлять и редактировать данные",
   "tour.completedStepModal.importProperties.subtitleLinkLabel": "на страницах домов",
   "tour.completedStepModal.importProperties.bodyText.default": "Шахматка нужна, чтобы работать с конкретными помещениями. Загляните в путеводитель Домов — он поможет с другими задачами.",
   "tour.completedStepModal.importProperties.bodyText.ticket": "Следующий шаг к оптимизации работы с заявками — создание заявки. На ее примере вы увидите, как выглядит диспетчерская и форма заявки. Рекомендуем перенести на платформу реальную заявку, поскольку их нельзя удалять.",
-  "tour.completedStepModal.importProperties.bodyText.meter": "Следующий шаг в оптимизации работы с показаниями счетчиков — добавление показаний на платформу. Вы можете добавить реальные показания ИПУ или указать любые данные, чтобы разобраться, как это работает.",
+  "tour.completedStepModal.importProperties.bodyText.meter": "Следующий шаг в оптимизации работы — добавление приборов учета. Чтобы разобраться, как устроена работа с ИПУ на платформе, добавьте прибор, а затем укажите любые показания.",
   "tour.completedStepModal.importProperties.bodyText.resident": "Следующий шаг к укреплению отношений с жителями — внедрение приложения. Это нужно, чтобы жители самостоятельно оплачивали квитанции, оставляли заявки и передавали показания счетчиков. Чтобы продвигать приложение среди жителей было проще, мы подготовили гайд с готовыми шаблонами.",
   "tour.completedStepModal.importProperties.buttonLabel.default": "В путеводитель",
   "tour.completedStepModal.importProperties.buttonLabel.ticket": "Создать заявку",
-  "tour.completedStepModal.importProperties.buttonLabel.meter": "Добавить показания ИПУ",
+  "tour.completedStepModal.importProperties.buttonLabel.meter": "Добавить ИПУ",
   "tour.completedStepModal.importProperties.buttonLabel.resident": "Смотреть гайд",
   "tour.completedStepModal.createTicket.title": "Первая заявка создана",
   "tour.completedStepModal.createTicket.subtitle": "Все заявки можно посмотреть",
@@ -2134,9 +2177,16 @@
   "tour.completedStepModal.createTicket.bodyText.ticket": "Последний шаг к оптимизации работы с заявками — рассказать жителям о мобильном приложении Doma. С его помощью можно отправлять заявки в адрес управляющей организации. Чтобы продвигать приложение среди жителей было проще, мы подготовили гайд с готовыми шаблонами.",
   "tour.completedStepModal.createTicket.buttonLabel.default": "В путеводитель",
   "tour.completedStepModal.createTicket.buttonLabel.ticket": "Смотреть гайд",
+  "tour.completedStepModal.createMeter.title": "Все получилось — вы добавили первый счетчик",
+  "tour.completedStepModal.createMeter.subtitle": "Вы сможете добавить больше объектов",
+  "tour.completedStepModal.createMeter.subtitleLinkLabel": "в разделе «Приборы и показания»",
+  "tour.completedStepModal.createMeter.bodyText.default": "Теперь вы можете хранить и работать с данными ИПУ на платформе. Загляните в путеводитель Домов — он поможет с другими задачами.",
+  "tour.completedStepModal.createMeter.bodyText.meter": "Следующий шаг в оптимизации работы приборов учета — загрузка показаний",
+  "tour.completedStepModal.createMeter.buttonLabel.default": "В путеводитель",
+  "tour.completedStepModal.createMeter.buttonLabel.meter": "Добавить показания",
   "tour.completedStepModal.createMeterReadings.title": "Первые показания ИПУ загружены",
   "tour.completedStepModal.createMeterReadings.subtitle": "Вы сможете загрузить больше показаний",
-  "tour.completedStepModal.createMeterReadings.subtitleLinkLabel": "в разделе «Приборы учета»",
+  "tour.completedStepModal.createMeterReadings.subtitleLinkLabel": "в разделе «Приборы и показания",
   "tour.completedStepModal.createMeterReadings.bodyText.default": "Теперь вы можете хранить и работать с данными ИПУ на платформе. Загляните в путеводитель Домов — он поможет с другими задачами.",
   "tour.completedStepModal.createMeterReadings.bodyText.meter": "Последний шаг к оптимизации работы с ИПУ — предложить жителям скачать мобильное приложение Doma и отправлять показания с его помощью. Чтобы продвигать приложение среди жителей было проще, мы подготовили гайд с готовыми шаблонами.",
   "tour.completedStepModal.createMeterReadings.buttonLabel.default": "В путеводитель",
