feat(condo): DOMA-8799 background import meters processing implementation (#4827)
* feat(condo): DOMA-8799 add MeterImportTask model

* feat(condo): DOMA-8799 implement base success proceeding case

* feat(condo): DOMA-8799 background import meters processing implementation

* feat(condo): DOMA-8799 UI for background processing of meter reading files

* feat(condo): DOMA-8799 UI for background processing of meter reading files

* feat(condo): DOMA-8799 UI for background processing of meter reading files

* feat(condo): DOMA-8799 refactor code

* feat(condo): DOMA-8799 rename MeterImportTask to MeterReadingsImportTask

* feat(condo): DOMA-8799 add locale to MeterReadingsImportTask.js

* feat(condo): DOMA-8799 add locale to MeterReadingsImportTask.js

* feat(condo): DOMA-8799 add locale to MeterReadingsImportTask.js

* feat(condo): DOMA-8799 add locale to MeterReadingsImportTask.js

* feat(condo): DOMA-8799 rename format options

* feat(condo): DOMA-8799 add getObjectStream util support of local file adapter (test cases)

* feat(condo): DOMA-8799 add getObjectStream util support of local file adapter (test cases)

* feat(condo): DOMA-8799 test runner explicit logs

* feat(condo): DOMA-8799 update migrations

* feat(condo): DOMA-8799 fix status calc logic

* feat(condo): DOMA-8799 fix status calc logic

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -2309,6 +2309,13 @@
   "tasks.IncidentExportTask.progress.description.processing": "Incidents exported: {exported} of {total}",
   "tasks.IncidentExportTask.progress.description.completed": "File has been created",
   "tasks.IncidentExportTask.progress.description.completed.link.label": "Download",
+  "tasks.MeterReadingsImportTask.progress.title": "Import meter readings",
+  "tasks.MeterReadingsImportTask.progress.description.preparing": "Preparing to import meter readings",
+  "tasks.MeterReadingsImportTask.progress.description.processing": "Meter readings processed: {imported} of {total}",
+  "tasks.MeterReadingsImportTask.progress.description.completed": "File has been created",
+  "tasks.MeterReadingsImportTask.progress.description.partiallyCompleted": "File partially imported. Fix errors and upload broken records again",
+  "tasks.MeterReadingsImportTask.progress.description.error": "File not imported. {errorMessage}",
+  "tasks.MeterReadingsImportTask.progress.description.completed.link.label": "Download",
   "OK": "OK",
   "Title": "Title",
   "profile": "My profile",
