--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2309,6 +2309,13 @@
   "tasks.IncidentExportTask.progress.description.processing": "Экспортированно записей: {exported} из {total}",
   "tasks.IncidentExportTask.progress.description.completed": "Файл сформирован",
   "tasks.IncidentExportTask.progress.description.completed.link.label": "Скачать",
+  "tasks.MeterReadingsImportTask.progress.title": "Импорт ИПУ",
+  "tasks.MeterReadingsImportTask.progress.description.preparing": "Подготовка к импорту",
+  "tasks.MeterReadingsImportTask.progress.description.processing": "Обработано записей: {imported} из {total}",
+  "tasks.MeterReadingsImportTask.progress.description.completed": "Файл импортирован",
+  "tasks.MeterReadingsImportTask.progress.description.partiallyCompleted": "Файл импортирован частично. Устраните ошибки и импортируйте ошибочные строки заново",
+  "tasks.MeterReadingsImportTask.progress.description.error": "Файл не импортирован. {errorMessage}",
+  "tasks.MeterReadingsImportTask.progress.description.completed.link.label": "Скачать",
   "OK": "Хорошо",
   "Title": "Заголовок",
   "profile": "Мой профиль",
