feat(condo): DOMA-9224 added isVerified checkbox to contact import modal (#4840)
* feat(condo): DOMA-9224 added isVerified checkbox to contact import modal

* fix(condo): DOMA-9224 rename prop to extraModalContent

--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -56,6 +56,8 @@
   "import.contact.genitive": "Контактов жителей",
   "import.contact.prepositional": "Контактах жителей",
   "import.contact.requiredFields": "Укажите адрес, номер помещения, тип помещения, телефон и ФИО",
+  "import.contact.isVerifiedCheckbox.tooltip.title": "Верифицированные контакты могут пользоваться сервисами в мобильном приложении",
+  "import.contact.isVerifiedCheckbox.title": "Верифицировать контакты",
   "import.property.plural": "Дома",
   "import.property.genitive": "Домов",
   "import.property.prepositional": "Домах",
@@ -2346,7 +2348,6 @@
   "contact.import.column.Name": "ФИО",
   "contact.import.column.Email": "E-mail",
   "contact.import.column.Role": "Роль",
-  "contact.import.column.IsVerified": "Верифицирован",
   "contact.form.prompt.title": "Не сохранять контакт?",
   "contact.form.prompt.message": "Контакт не сохранится, если вы уйдете со страницы.",
   "onboarding.tourStep.tooltip.ticket.title": "Несколько полей заполнено автоматически",
@@ -2504,7 +2505,6 @@
   "errors.import.AlreadyCreatedContact": "Такой контакт уже существует в этой квартире",
   "errors.import.IncorrectContactRole": "Неверная роль. Используйте роли из списка: {rolesList}",
   "errors.import.IncorrectIsResidentTicketFormat": "Поле «Заявка от жителя» заполнено некорректно",
-  "errors.import.IncorrectIsVerifiedFormat": "Поле «Верифицирован» заполнено некорректно",
   "errors.import.date": "Неверное значение даты в столбце \"{columnName}\". Используйте значение с типом Строка в формате \"{format}\"",
   "errors.import.IncorrectPhoneAndFullNameForResidentTicket": "Некорректные данные жителя (\"ФИО\", \"Номер телефона\")",
   "errors.import.isEmptyDetails": "Поле \"Описание проблемы\" должно быть заполнено",
