--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -56,6 +56,8 @@
   "import.contact.genitive": "Contacts",
   "import.contact.prepositional": "Contacts",
   "import.contact.requiredFields": "Enter address, unit number, unit type, phone and name",
+  "import.contact.isVerifiedCheckbox.tooltip.title": "Verified contacts can use services in the mobile app",
+  "import.contact.isVerifiedCheckbox.title": "Verify contacts",
   "import.property.plural": "Properties",
   "import.property.genitive": "Properties",
   "import.property.prepositional": "Properties",
@@ -2346,7 +2348,6 @@
   "contact.import.column.Name": "Full name",
   "contact.import.column.Email": "Email",
   "contact.import.column.Role": "Role",
-  "contact.import.column.IsVerified": "Is verified",
   "contact.form.prompt.title": "Do not save contact?",
   "contact.form.prompt.message": "Contact will not be saved if you leave the page.",
   "onboarding.tourStep.tooltip.ticket.title": "Multiple fields filled automatically",
@@ -2504,7 +2505,6 @@
   "errors.import.AlreadyCreatedContact": "Such a contact already exists in this unit",
   "errors.import.IncorrectContactRole": "Incorrect contact role. Please use one of the following list: {rolesList}",
   "errors.import.IncorrectIsResidentTicketFormat": "The field «Is resident ticket» is filled incorrectly",
-  "errors.import.IncorrectIsVerifiedFormat": "The field «Is verified» is filled incorrectly",
   "errors.import.date": "Incorrect date format in column \"{columnName}\". Use a value of type String in the format: \"{format}\"",
   "errors.import.IncorrectPhoneAndFullNameForResidentTicket": "Incorrect resident data (\"Full Name\", \"Phone\")",
   "errors.import.isEmptyDetails": "The \"Details\" field must be filled",
